--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Excalidraw",
-  "name": "Excalidraw",
-  "description": "Excalidraw is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them.",
+  "short_name": "InSketch",
+  "name": "InSketch",
+  "description": "InSketch is a whiteboard tool that lets you easily sketch diagrams that have a hand-drawn feel to them.",
   "icons": [
     {
       "src": "logo-180x180.png",
